--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="/styles/overlays.css">
     <link rel="stylesheet" href="/styles/configuration.css">
     <link rel="stylesheet" href="/styles/game.css">
-    <script src="scripts/config.js" defer></script>
-    <script src="scripts/game.js" defer></script>
+    <script src="/scripts/config.js" defer></script>
+    <script src="/scripts/game.js" defer></script>
     <script src="/scripts/app.js" defer></script>
     
 <body>
