--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/overlays.css">
-    <link rel="stylesheet" href="/styles/configuration.css">
-    <link rel="stylesheet" href="/styles/game.css">
-    <script src="/scripts/config.js" defer></script>
-    <script src="/scripts/game.js" defer></script>
-    <script src="/scripts/app.js" defer></script>
+    <link rel="stylesheet" href="/tic-tac-toe-game/styles/styles.css">
+    <link rel="stylesheet" href="/tic-tac-toe-game/styles/overlays.css">
+    <link rel="stylesheet" href="/tic-tac-toe-game/styles/configuration.css">
+    <link rel="stylesheet" href="/tic-tac-toe-game/styles/game.css">
+    <script src="/tic-tac-toe-game/scripts/config.js" defer></script>
+    <script src="/tic-tac-toe-game/scripts/game.js" defer></script>
+    <script src="/tic-tac-toe-game/scripts/app.js" defer></script>
     
 <body>
     <div id="backdrop"></div>
